{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 120,
  "lineage": "54d1a0f8-5056-f02d-389f-521d9bc7cffe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0b0eda4ddeeccef33",
            "domain": "vpc",
            "id": "eipalloc-0c4195856a9a10d5c",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0eaf3cb6ba5b2b0b7",
            "private_dns": "ip-10-1-5-202.us-east-2.compute.internal",
            "private_ip": "10.1.5.202",
            "public_dns": "ec2-18-190-65-105.us-east-2.compute.amazonaws.com",
            "public_ip": "18.190.65.105",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0443305dabd4be2bc",
            "arn": "arn:aws:ec2:us-east-2:334213623568:instance/i-0c9a5563ea9d7e8a5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c9a5563ea9d7e8a5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "BastiankeyPair-ohio",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04498d619c57c10af",
            "private_dns": "ip-10-1-7-236.us-east-2.compute.internal",
            "private_ip": "10.1.7.236",
            "public_dns": "ec2-3-144-81-62.us-east-2.compute.amazonaws.com",
            "public_ip": "3.144.81.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0906fd3b8918f18e4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0be2c7fed6a2d2c4e",
            "tags": {
              "Name": "Web Server 1"
            },
            "tags_all": {
              "Name": "Web Server 1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07fefafdeffefbdc5"
            ]
          },
          "dependencies": [
            "aws_security_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:334213623568:internet-gateway/igw-0de1b4f8fc7ff9b7f",
            "id": "igw-0de1b4f8fc7ff9b7f",
            "owner_id": "334213623568",
            "tags": {
              "Name": "terraformigw"
            },
            "tags_all": {
              "Name": "terraformigw"
            },
            "vpc_id": "vpc-09260a6b9c837509b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4195856a9a10d5c",
            "connectivity_type": "public",
            "id": "nat-0586e39ce486e9505",
            "network_interface_id": "eni-0eaf3cb6ba5b2b0b7",
            "private_ip": "10.1.5.202",
            "public_ip": "18.190.65.105",
            "subnet_id": "subnet-064937d18ca3c8788",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0af30a2b57a21dae31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0586e39ce486e9505",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0af30a2b57a21dae3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0de1b4f8fc7ff9b7f",
            "id": "r-rtb-04115ef62de1041631080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04115ef62de104163",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:334213623568:route-table/rtb-0af30a2b57a21dae3",
            "id": "rtb-0af30a2b57a21dae3",
            "owner_id": "334213623568",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0586e39ce486e9505",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "vpc_id": "vpc-09260a6b9c837509b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:334213623568:route-table/rtb-04115ef62de104163",
            "id": "rtb-04115ef62de104163",
            "owner_id": "334213623568",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0de1b4f8fc7ff9b7f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "vpc_id": "vpc-09260a6b9c837509b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080a81f62373c70da",
            "route_table_id": "rtb-0af30a2b57a21dae3",
            "subnet_id": "subnet-0b2110ffcdfc53fd3"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "aws_route_table.private",
            "aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028ffc88b9d80df3b",
            "route_table_id": "rtb-0af30a2b57a21dae3",
            "subnet_id": "subnet-0c62c2005a8b52e81"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae37670241c689c4",
            "route_table_id": "rtb-0af30a2b57a21dae3",
            "subnet_id": "subnet-075c59555e8a948c7"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000731aec782fff68",
            "route_table_id": "rtb-0af30a2b57a21dae3",
            "subnet_id": "subnet-0fc48ba14e06cb07c"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04eb8a94624dcde85",
            "route_table_id": "rtb-04115ef62de104163",
            "subnet_id": "subnet-064937d18ca3c8788"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "aws_route_table.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021b10c2c506d7152",
            "route_table_id": "rtb-04115ef62de104163",
            "subnet_id": "subnet-09e971b5805c5a1dd"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "aws_route_table.public",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f13f5b58709cd87c",
            "route_table_id": "rtb-04115ef62de104163",
            "subnet_id": "subnet-0be2c7fed6a2d2c4e"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3044af9752f0ce4",
            "route_table_id": "rtb-04115ef62de104163",
            "subnet_id": "subnet-0b328325be6de914d"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:334213623568:security-group/sg-07fefafdeffefbdc5",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-07fefafdeffefbdc5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "internal-sg",
            "name_prefix": "",
            "owner_id": "334213623568",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "internal-sg"
            },
            "tags_all": {
              "Name": "internal-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09260a6b9c837509b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:334213623568:subnet/subnet-0b2110ffcdfc53fd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0b2110ffcdfc53fd3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "334213623568",
            "tags": {
              "Name": "private-subnet-0"
            },
            "tags_all": {
              "Name": "private-subnet-0"
            },
            "vpc_id": "vpc-09260a6b9c837509b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:334213623568:subnet/subnet-0c62c2005a8b52e81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0c62c2005a8b52e81",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "334213623568",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-09260a6b9c837509b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:334213623568:subnet/subnet-075c59555e8a948c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-075c59555e8a948c7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "334213623568",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-09260a6b9c837509b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:334213623568:subnet/subnet-0fc48ba14e06cb07c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.1.4.0/24",
            "id": "subnet-0fc48ba14e06cb07c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "334213623568",
            "tags": {
              "Name": "private-subnet-3"
            },
            "tags_all": {
              "Name": "private-subnet-3"
            },
            "vpc_id": "vpc-09260a6b9c837509b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:334213623568:subnet/subnet-064937d18ca3c8788",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.5.0/24",
            "id": "subnet-064937d18ca3c8788",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "334213623568",
            "tags": {
              "Name": "public-subnet-us-east-2a"
            },
            "tags_all": {
              "Name": "public-subnet-us-east-2a"
            },
            "vpc_id": "vpc-09260a6b9c837509b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:334213623568:subnet/subnet-09e971b5805c5a1dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.6.0/24",
            "id": "subnet-09e971b5805c5a1dd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "334213623568",
            "tags": {
              "Name": "public-subnet-us-east-2b"
            },
            "tags_all": {
              "Name": "public-subnet-us-east-2b"
            },
            "vpc_id": "vpc-09260a6b9c837509b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:334213623568:subnet/subnet-0be2c7fed6a2d2c4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.1.7.0/24",
            "id": "subnet-0be2c7fed6a2d2c4e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "334213623568",
            "tags": {
              "Name": "public-subnet-us-east-2c"
            },
            "tags_all": {
              "Name": "public-subnet-us-east-2c"
            },
            "vpc_id": "vpc-09260a6b9c837509b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:334213623568:subnet/subnet-0b328325be6de914d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.1.8.0/24",
            "id": "subnet-0b328325be6de914d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "334213623568",
            "tags": {
              "Name": "public-subnet-us-east-2c"
            },
            "tags_all": {
              "Name": "public-subnet-us-east-2c"
            },
            "vpc_id": "vpc-09260a6b9c837509b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:334213623568:vpc/vpc-09260a6b9c837509b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0d0354516335ab90a",
            "default_route_table_id": "rtb-09b384522875a4dd7",
            "default_security_group_id": "sg-0521b64936f7bbc20",
            "dhcp_options_id": "dopt-a4f943cf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09260a6b9c837509b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09b384522875a4dd7",
            "owner_id": "334213623568",
            "tags": {
              "Name": "Terraform_vpc"
            },
            "tags_all": {
              "Name": "Terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}